objects/Role__c.object
<CustomObject>
    <description>here is role object which will contain role of employee on the project</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>here is description for role object</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Role_Id__c</fullName>
        <description>here is role id for role object</description>
        <displayFormat>R-{0000}</displayFormat>
        <externalId>true</externalId>
        <label>Role Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>here is role given have to select any one</description>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Project  Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sr. Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution Architect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Lead</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Role</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Role</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>